--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* styles.css */
+@layer tailwind-base, primereact, tailwind-utilities;
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer primereact {
+  /* Your PrimeReact styles here */
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
