style: change scrollbar css

--- a/src/app/scrollbar.css
+++ b/src/app/scrollbar.css
@@ -1,20 +1,16 @@
-/* CustomScrollbar.css */
-
-/* Container style with overflow */
 .scrolltarget {
   overflow-y: auto; /* Enable vertical scrollbar when needed */
-  scrollbar-color: #4d7fff93 #dddddd37;
-  /* Thumb and track color for Firefox */
+  scrollbar-color: #4d7fff #dddddd;
 }
 
 /* Style for WebKit browsers */
 .scrolltarget::-webkit-scrollbar {
-  width: 100vw; /* Width of the scrollbar */
+  width: 90vw; /* Width of the scrollbar */ 
 }
 
 /* Style for the scrollbar thumb */
 .scrolltarget::-webkit-scrollbar-thumb {
-  background: #1e293b7a;
+  background: #4d7fff;
   border-radius: 99px;
 }
 
@@ -28,9 +24,4 @@
 /* Hide the scrollbar buttons */
 .scrolltarget::-webkit-scrollbar-button {
   display: none;
-}
-
-/* Style for Firefox scrollbar thumb */
-.scrolltarget {
-  scrollbar-color: #4d7fff #ddd; /* Thumb and track color for Firefox */
 }
